--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
-*.pyc
-checkpoints/
+*
+!*/
+!.*
+!*.py
+!*.pyx
+!*.md
+!*.sh
+!*.ipynb
+!*.conf
+!*.yaml
+!*.yml
+!Makefile
+notebooks/.ipynb_checkpoints/*
+data/*
+outputs/*
+exp/*
